# crud-app

./: .dockerignore  .env  Cargo.toml  Dockerfile
conf/: .env
docker/: docker-compose.yml  init.sql  nginx.conf
src/: controller.rs  main.rs  model.rs  rate_limiter.rs  user_service.rs
