[package]
name = "crud"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
dotenv = "0.15.0"
dotenvy = "0.15.7"
redis = "0.27.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = { version = "1.0.132" }
sqlx = { version = "0.8.2", features = ["postgres", "macros", "runtime-tokio-native-tls", "uuid"] }
tokio = { version = "1.41.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
